fix(deploy): support dokploy compose deployment
